# Chrono2D

./: .gitignore  CMakeLists.txt  Component.hpp  Components.cpp  Components.hpp  Entity.hpp  README.md  System.hpp  Systems.cpp  ecs.hpp  main.cpp
ECS/: ComponentArray.hpp  ECS.hpp  EntityManager.hpp
Systems/: CollisionSystem.hpp  ConstraintSystem.hpp  KeyEventSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
include/: constants.hpp  game_object.hpp  player.hpp  utils.hpp
include/primitives/: balance.hpp  flag.hpp  rectangle.hpp  rope.hpp  tremplin.hpp
maps/: map0.hpp  map1.hpp  map2.hpp  map3.hpp  map4.hpp
src/: game_object.cpp  player.cpp
utils/: math.hpp
